수정, 확장중